{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 326,
  "lineage": "1eb2f4b2-8aed-8f7d-b37f-007d58f19e16",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "region_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/virtualNetworks/vnet-region-a/subnets/subnet-devops",
            "network_security_group_id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/networkSecurityGroups/nsg-region-a-devops",
            "subnet_id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/virtualNetworks/vnet-region-a/subnets/subnet-devops"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "module.nsg_region_a.azurerm_network_security_group.main",
            "module.vnet_region_a.azurerm_subnet.main",
            "module.vnet_region_a.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "region_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/virtualNetworks/vnet-region-b/subnets/subnet-kubernetes",
            "network_security_group_id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/networkSecurityGroups/nsg-region-b-k8s",
            "subnet_id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/virtualNetworks/vnet-region-b/subnets/subnet-kubernetes"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "module.nsg_region_b.azurerm_network_security_group.main",
            "module.vnet_region_b.azurerm_subnet.main",
            "module.vnet_region_b.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_region_a",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/networkSecurityGroups/nsg-region-a-devops",
            "location": "northeurope",
            "name": "nsg-region-a-devops",
            "resource_group_name": "rg-multiregion-devops",
            "security_rule": [],
            "tags": {
              "Environment": "dev",
              "Region": "A"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_region_a",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/networkSecurityGroups/nsg-region-a-devops/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "nsg-region-a-devops",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "rg-multiregion-devops",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "module.nsg_region_a.azurerm_network_security_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/networkSecurityGroups/nsg-region-a-devops/securityRules/HTTP",
            "name": "HTTP",
            "network_security_group_name": "nsg-region-a-devops",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "rg-multiregion-devops",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "module.nsg_region_a.azurerm_network_security_group.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/networkSecurityGroups/nsg-region-a-devops/securityRules/HTTPS",
            "name": "HTTPS",
            "network_security_group_name": "nsg-region-a-devops",
            "priority": 1003,
            "protocol": "Tcp",
            "resource_group_name": "rg-multiregion-devops",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "module.nsg_region_a.azurerm_network_security_group.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/networkSecurityGroups/nsg-region-a-devops/securityRules/Jenkins",
            "name": "Jenkins",
            "network_security_group_name": "nsg-region-a-devops",
            "priority": 1004,
            "protocol": "Tcp",
            "resource_group_name": "rg-multiregion-devops",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "module.nsg_region_a.azurerm_network_security_group.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "9000",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/networkSecurityGroups/nsg-region-a-devops/securityRules/SonarQube",
            "name": "SonarQube",
            "network_security_group_name": "nsg-region-a-devops",
            "priority": 1005,
            "protocol": "Tcp",
            "resource_group_name": "rg-multiregion-devops",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "module.nsg_region_a.azurerm_network_security_group.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "2376",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/networkSecurityGroups/nsg-region-a-devops/securityRules/Docker",
            "name": "Docker",
            "network_security_group_name": "nsg-region-a-devops",
            "priority": 1006,
            "protocol": "Tcp",
            "resource_group_name": "rg-multiregion-devops",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "module.nsg_region_a.azurerm_network_security_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_region_b",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/networkSecurityGroups/nsg-region-b-k8s",
            "location": "westeurope",
            "name": "nsg-region-b-k8s",
            "resource_group_name": "rg-multiregion-devops",
            "security_rule": [],
            "tags": {
              "Environment": "dev",
              "Region": "B"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_region_b",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/networkSecurityGroups/nsg-region-b-k8s/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "nsg-region-b-k8s",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "rg-multiregion-devops",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "module.nsg_region_b.azurerm_network_security_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "6443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/networkSecurityGroups/nsg-region-b-k8s/securityRules/KubernetesAPI",
            "name": "KubernetesAPI",
            "network_security_group_name": "nsg-region-b-k8s",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "rg-multiregion-devops",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "module.nsg_region_b.azurerm_network_security_group.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "10250",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/networkSecurityGroups/nsg-region-b-k8s/securityRules/KubeletAPI",
            "name": "KubeletAPI",
            "network_security_group_name": "nsg-region-b-k8s",
            "priority": 1003,
            "protocol": "Tcp",
            "resource_group_name": "rg-multiregion-devops",
            "source_address_prefix": "10.2.0.0/16",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "module.nsg_region_b.azurerm_network_security_group.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "30000-32767",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/networkSecurityGroups/nsg-region-b-k8s/securityRules/NodePortServices",
            "name": "NodePortServices",
            "network_security_group_name": "nsg-region-b-k8s",
            "priority": 1004,
            "protocol": "Tcp",
            "resource_group_name": "rg-multiregion-devops",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "module.nsg_region_b.azurerm_network_security_group.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8472",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/networkSecurityGroups/nsg-region-b-k8s/securityRules/FlannelOverlay",
            "name": "FlannelOverlay",
            "network_security_group_name": "nsg-region-b-k8s",
            "priority": 1005,
            "protocol": "Udp",
            "resource_group_name": "rg-multiregion-devops",
            "source_address_prefix": "10.2.0.0/16",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "module.nsg_region_b.azurerm_network_security_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.vm_jenkins_agent",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/networkInterfaces/vm-jenkins-agent-nic",
            "internal_domain_name_suffix": "qmuvvfoehjbupi5otpof2px2re.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/publicIPAddresses/vm-jenkins-agent-pip",
                "subnet_id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/virtualNetworks/vnet-region-a/subnets/subnet-devops"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "name": "vm-jenkins-agent-nic",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "rg-multiregion-devops",
            "tags": {
              "Environment": "dev",
              "Region": "A",
              "Role": "Jenkins-agent"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "module.vm_jenkins_agent.azurerm_public_ip.main",
            "module.vnet_region_a.azurerm_subnet.main",
            "module.vnet_region_a.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.vm_jenkins_agent",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/publicIPAddresses/vm-jenkins-agent-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "134.149.25.125",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "vm-jenkins-agent-pip",
            "resource_group_name": "rg-multiregion-devops",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "dev",
              "Region": "A",
              "Role": "Jenkins-agent"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.vm_jenkins_master",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/networkInterfaces/vm-jenkins-master-nic",
            "internal_domain_name_suffix": "qmuvvfoehjbupi5otpof2px2re.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/publicIPAddresses/vm-jenkins-master-pip",
                "subnet_id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/virtualNetworks/vnet-region-a/subnets/subnet-devops"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "name": "vm-jenkins-master-nic",
            "private_ip_address": "10.1.1.5",
            "private_ip_addresses": [
              "10.1.1.5"
            ],
            "resource_group_name": "rg-multiregion-devops",
            "tags": {
              "Environment": "dev",
              "Region": "A",
              "Role": "jenkins-master"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "module.vm_jenkins_master.azurerm_public_ip.main",
            "module.vnet_region_a.azurerm_subnet.main",
            "module.vnet_region_a.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.vm_jenkins_master",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/publicIPAddresses/vm-jenkins-master-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "134.149.74.29",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "vm-jenkins-master-pip",
            "resource_group_name": "rg-multiregion-devops",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "dev",
              "Region": "A",
              "Role": "jenkins-master"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.vm_k8s_master",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/networkInterfaces/vm-k8s-master-nic",
            "internal_domain_name_suffix": "b55ni2y0qwdenbwqirgv1ttkrg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.2.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/publicIPAddresses/vm-k8s-master-pip",
                "subnet_id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/virtualNetworks/vnet-region-b/subnets/subnet-kubernetes"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "vm-k8s-master-nic",
            "private_ip_address": "10.2.1.4",
            "private_ip_addresses": [
              "10.2.1.4"
            ],
            "resource_group_name": "rg-multiregion-devops",
            "tags": {
              "Environment": "dev",
              "Region": "B",
              "Role": "K8s-Master"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "module.vm_k8s_master.azurerm_public_ip.main",
            "module.vnet_region_b.azurerm_subnet.main",
            "module.vnet_region_b.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.vm_k8s_master",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/publicIPAddresses/vm-k8s-master-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.68.227.73",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "vm-k8s-master-pip",
            "resource_group_name": "rg-multiregion-devops",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "dev",
              "Region": "B",
              "Role": "K8s-Master"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.vm_k8s_worker1",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/networkInterfaces/vm-k8s-worker1-nic",
            "internal_domain_name_suffix": "b55ni2y0qwdenbwqirgv1ttkrg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.2.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/publicIPAddresses/vm-k8s-worker1-pip",
                "subnet_id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/virtualNetworks/vnet-region-b/subnets/subnet-kubernetes"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "vm-k8s-worker1-nic",
            "private_ip_address": "10.2.1.5",
            "private_ip_addresses": [
              "10.2.1.5"
            ],
            "resource_group_name": "rg-multiregion-devops",
            "tags": {
              "Environment": "dev",
              "Region": "B",
              "Role": "K8s-Worker1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "module.vm_k8s_worker1.azurerm_public_ip.main",
            "module.vnet_region_b.azurerm_subnet.main",
            "module.vnet_region_b.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.vm_k8s_worker1",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/publicIPAddresses/vm-k8s-worker1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.160.107.131",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "vm-k8s-worker1-pip",
            "resource_group_name": "rg-multiregion-devops",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "dev",
              "Region": "B",
              "Role": "K8s-Worker1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.vm_k8s_worker2",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/networkInterfaces/vm-k8s-worker2-nic",
            "internal_domain_name_suffix": "b55ni2y0qwdenbwqirgv1ttkrg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.2.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/publicIPAddresses/vm-k8s-worker2-pip",
                "subnet_id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/virtualNetworks/vnet-region-b/subnets/subnet-kubernetes"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "vm-k8s-worker2-nic",
            "private_ip_address": "10.2.1.6",
            "private_ip_addresses": [
              "10.2.1.6"
            ],
            "resource_group_name": "rg-multiregion-devops",
            "tags": {
              "Environment": "dev",
              "Region": "B",
              "Role": "K8s-Worker2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "module.vm_k8s_worker2.azurerm_public_ip.main",
            "module.vnet_region_b.azurerm_subnet.main",
            "module.vnet_region_b.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.vm_k8s_worker2",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/publicIPAddresses/vm-k8s-worker2-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.201.73.200",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "vm-k8s-worker2-pip",
            "resource_group_name": "rg-multiregion-devops",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "dev",
              "Region": "B",
              "Role": "K8s-Worker2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_region_a",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/virtualNetworks/vnet-region-a/subnets/subnet-devops",
            "name": "subnet-devops",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-multiregion-devops",
            "virtual_network_name": "vnet-region-a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "module.vnet_region_a.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_region_a",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "955a2983-3ac4-4743-a3ee-9bdc5e3efc8c",
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/virtualNetworks/vnet-region-a",
            "location": "northeurope",
            "name": "vnet-region-a",
            "resource_group_name": "rg-multiregion-devops",
            "tags": {
              "Environment": "dev",
              "Region": "A"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_region_b",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/virtualNetworks/vnet-region-b/subnets/subnet-kubernetes",
            "name": "subnet-kubernetes",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-multiregion-devops",
            "virtual_network_name": "vnet-region-b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "module.vnet_region_b.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_region_b",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "73d4fe0f-851a-4686-86d0-444d5dce6a8e",
            "id": "/subscriptions/ca049879-c17b-4a2b-a969-2dc1aadbccf1/resourceGroups/rg-multiregion-devops/providers/Microsoft.Network/virtualNetworks/vnet-region-b",
            "location": "westeurope",
            "name": "vnet-region-b",
            "resource_group_name": "rg-multiregion-devops",
            "tags": {
              "Environment": "dev",
              "Region": "B"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}